--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	</script>
 <!-- END GADWP Universal Analytics -->
 	</head>
-	<body>
+	<body style="overflow-x:hidden; overflow-y:hidden">
 		<!--[if lte IE 9]>
 	    <div class="browser-from-1990">
 	      <p>You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
@@ -107,7 +107,7 @@
 			        <div class="o-wrap">
 			            <div class="o-container">
 			                <div class="c-nav-main_bg_white">
-								<div class="c-nav-main_wrap">
+								<div class="c-nav-main_wrap" style="overflow-x:hidden; overflow-y:hidden">
 			    					<div class="c-nav-main_wrap_inner">
 			    						<ul id="menu-main" class="menu">
 			    							<li id="menu-item-289" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-5 current_page_item menu-item-289"><a href="">Lorem Ipsum a</a></li>
